--- a/css/filter.css
+++ b/css/filter.css
@@ -4,7 +4,7 @@
 
 .filter__reset {
   position: absolute;
-  top: 7px;
+  top: 0;
   right: 0;
   color: #ccc;
 }
